# experiment_hal

./: .gitignore  CMakeLists.txt  README.md  bob.toml  notes.md  size_analysis.py  sizes.md
cmake/: FindBob.cmake  cmsis.cmake  stm32.cmake  version.in.h
experiments/: CMakeLists.txt
experiments/01_gpio_hal/: CMakeLists.txt  main.cpp  stm32f7xx_hal_conf.h
experiments/02_gpio_ll/: CMakeLists.txt  main.cpp
experiments/03_functions/: main.cpp
experiments/04_oop/: main.cpp
experiments/05_oop_template/: CMakeLists.txt  main.cpp
experiments/system/: CMakeLists.txt  reset_handler.s  timeout.cpp  timeout.h  vector_table.cpp
linkerscripts/stm32f7/: sections.ld  sections.org.ld
